--- a/plugins/world_view/views/layouts/application.html.erb
+++ b/plugins/world_view/views/layouts/application.html.erb
@@ -25,6 +25,13 @@
       <input type="text" name="query" id="query" />
       <input type="submit" value="Search"/>
     </form>
+    
+    <div id="results">
+      <ol><!-- results -->
+      </ol>
+      <a href="#" class="prev-results">&laquo; Previous</a>
+      <a href="#" class="next-results">Next &raquo;</a>
+    </div>
   </div>
   <div id="status">
     <div class="loading">loading...</div>
