--- a/plugins/stats/views/layouts/application.html.erb
+++ b/plugins/stats/views/layouts/application.html.erb
@@ -7,22 +7,11 @@
     <%= javascript_include_tag 'jquery-periodic' -%>
     <%= javascript_include_tag @javascript_includes if @javascript_includes -%>
     <style type="text/css">
-      #total_progress,
-      #file_progress {
-        height: 5px;
-        width: 100%;
-        background-color: #EEE;
-        border: 1px solid #EEE;
-      }
-      #total_progress_indicator,
-      #file_progress_indicator {
-        height: 5px;
-        width: 0%;
-        background-color: #8CE;
-      }
+      body { font-family: helvetica,sans-serif; background-color: #EEE; }
     </style>
   </head>
   <body>
+    <h1>Stats</h1>
     <%= yield -%>
   </body>
 </html>
