--- a/plugins/songbird_search/views/songbird_search/index.xul.erb
+++ b/plugins/songbird_search/views/songbird_search/index.xul.erb
@@ -1,5 +1,16 @@
-<% plugin_javascript_include "flexigrid.js", "jquery.hotkeys.js", "jquery.get_params.js", "live_search", "search" -%>
-  <tree id="results" flex="1" enableColumnDrag="true" >
+<% plugin_javascript_include "jquery.get_params.js", "comet-setup", "search", "downloads" -%>
+
+  <popupset>
+    <popup id="resultpopup" position="after_start">
+      <menuitem label="Download" oncommand="triggerDownload(this);" />
+      <menuitem label="Download as.." />
+      <menuitem label="Mark as spam" />
+      <menuitem label="View file info" />
+    </popup>
+  </popupset>
+
+
+  <tree id="results" flex="8" enableColumnDrag="true">
     <treecols>
       <treecol id="space-label" label=" " />
       <splitter class="tree-splitter" />
@@ -14,6 +25,36 @@
       <treecol id="size-label" label="Size" sort="Size" flex="1" />
     </treecols>
     
+    <treechildren contextmenu="resultpopup">
+    </treechildren>
+  </tree>
+
+  <splitter
+    id="identifier"
+    state="open"
+    collapse="after"
+    resizebefore="closest"
+    resizeafter="closest">
+    <grippy />
+  </splitter>
+
+  <tree id="downloads" flex="3" enableColumnDrag="true" >
+    <treecols>
+      <treecol id="space-label" label=" " />
+      <splitter class="tree-splitter" />
+      <treecol id="name-label" label="Title" sort="Title" flex="20" />
+      <splitter class="tree-splitter" />
+      <treecol id="state-label" label="State" sort="State" flex="2" />
+      <splitter class="tree-splitter" />
+      <treecol id="size-label" label="Size" sort="Size" flex="4" />
+      <splitter class="tree-splitter" />
+      <treecol id="speed-label" label="Speed" sort="Speed" flex="2" />
+      <splitter class="tree-splitter" />
+      <treecol id="done-label" label="Done" sort="Done" flex="2" type="progressmeter" />
+      <splitter class="tree-splitter" />
+      <treecol id="eta-label" label="ETA" sort="ETA" flex="2" />    
+    </treecols>
+
     <treechildren>
     </treechildren>
   </tree>
