Streaming previews in songbird plugin

--- a/plugins/songbird_search/views/layouts/application.xul.erb
+++ b/plugins/songbird_search/views/layouts/application.xul.erb
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <?xml-stylesheet href="chrome://global/skin" type="text/css"?>
+<?xml-stylesheet href="/assets/songbird_search/stylesheets/search.css" type="text/css"?>
 
 <window title="LimeWire Search"
         xmlns:html="http://www.w3.org/1999/xhtml"
@@ -11,4 +12,7 @@
   <vbox flex="1" style="overflow: auto">
     <%= yield -%>
   </vbox>
+
+  <html:iframe style="height:0; border:0;" src="/soundmanager2.html"></html:iframe>
+
 </window>
