--- a/plugins/tagcloud/views/layouts/application.html.erb
+++ b/plugins/tagcloud/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="/assets/tagcloud/stylesheets/360player.css"/>
     
 
-    <%= javascript_include_tag 'jquery' -%>
+    <%= javascript_include_tag 'jquery', 'json2' -%>
     <%= javascript_include_tag @javascript_includes if @javascript_includes -%>
 
   </head>
