--- a/plugins/tagcloud/views/tagcloud/index.html.erb
+++ b/plugins/tagcloud/views/tagcloud/index.html.erb
@@ -1,11 +1,17 @@
 <% plugin_javascript_include 'jquery.cometd.js', 'jquery-ui', 'jquery-fluid16', 'jquery.dynacloud.js', 'comet-setup', 'search', 'soundmanager2', 'berniecode-animator', '360player' -%>
 
 <div class="grid_12">
-  <div id="results" class="ui360">
+  <div id="results">
     &nbsp;
   </div>
 </div>
 
-<div class="grid_4" style="background-color: #DDD">
-  hi
+<div class="grid_4" style="background-color: #DDD; margin-top: 14px; position: relative">
+  <canvas id="main-player" width="244" height="244"></canvas>
+  <div id="main-title"></div>
+  <div id="main-author"></div>
+  <div id="main-time">
+    <span>0:00</span>
+  </div>
+  <div id="main-cover"></div>
 </div>
