Lighten tagcloud bg

--- a/plugins/tagcloud/public/stylesheets/layout.css
+++ b/plugins/tagcloud/public/stylesheets/layout.css
@@ -4,7 +4,7 @@ Grey Box Method - Layout CSS
 ----------------------------------------------- */
 
 body {
-	background: #eee;
+	background: #F8F8F8;
 	border-top: 5px solid #000;
 	color: #333;
 	font-size: 11px;
