--- a/public/stylesheets/cloud/player.css
+++ b/public/stylesheets/cloud/player.css
@@ -15,12 +15,12 @@ body {
   right: 220px;
   top: 9px;
   font-size: 12px;
-  color: white;
+  color: #333;
 }
 
 #login a {
   outline: 0;
-  color: white;
+  color: #333;
   text-decoration: none;
 }
 
@@ -853,8 +853,8 @@ table {
 
 #create-playlists {
   position : absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 5px;
+  left: 5px;
   right: 0px;
   height: 24px;
   padding-top: 2px;
@@ -898,14 +898,14 @@ table {
 #q {
   -moz-border-radius : 9px;
   padding: 3px 25px 2px 5px;
-  border: 1px solid #aaa;
+  border: 1px solid #666;
   position: absolute;
   right: 10px;
   top: 5px;
   width: 170px;
-  color: #777;
+  color: #DDD;
   font-size: 12px;
-  background: white url(../../images/cloud/search-bg.png) no-repeat 100% 0;
+  background: #888 url(../../images/cloud/search-bg.png) no-repeat 100% 0;
 }
 
 #q:focus {
@@ -919,7 +919,7 @@ table {
   right: 0;
   height: 32px;
   border-bottom: 1px solid #aaa;
-  background-color: #2A2A2A;
+  background: #888 url(../../images/cloud/fade-bottom.png) repeat-x 0 0;
   -webkit-background-size: 100% 100%;
   padding: 0em 0em 0 0em;
   -moz-user-select : none;
@@ -932,7 +932,7 @@ table {
   left: 0;
   right: 0;
   border-top: 1px solid #aaa;
-  background-color: #555;
+  background-color: #888;
   background-image: url(../../images/cloud/fade-bottom.png);
   background-position: 100% 0;
   -webkit-background-size: 100% 100%;
