--- a/public/stylesheets/cloud/player.css
+++ b/public/stylesheets/cloud/player.css
@@ -132,6 +132,7 @@ img {
   right: 0;
   overflow-y: scroll;
   overflow-x: visible;
+  background: url(../../images/cloud/stripes.png) top left;
 }
 
 tbody > div {
@@ -220,10 +221,9 @@ table {
 
   table tbody tr td {
     width: 120px;
-    padding-right: 4px;
+    padding-right: 5px;
     height: 17px;
     padding-left: 2px;
-    border-right: 1px solid rgba(0,0,0,0.1);
     display: block;
     float: left;
     overflow: hidden;
