--- a/public/stylesheets/cloud/player.css
+++ b/public/stylesheets/cloud/player.css
@@ -90,7 +90,7 @@ img {
 
 #main-container {
   position: absolute;
-  top: 33px;
+  top: 32px;
   bottom: 50px;
   right: 0;
   left: 220px;
@@ -132,7 +132,7 @@ img {
   right: 0;
   overflow-y: scroll;
   overflow-x: visible;
-  background: url(../../images/cloud/stripes.png) top left;
+  background: #000 url(../../images/cloud/stripes.png) top left;
 }
 
 tbody > div {
@@ -153,9 +153,7 @@ tbody > div > div > marquee, tbody > div > div > div {
 
 table.list-header {
   width: 100%;
-  background-color: white;
-  background-image: url(../../images/cloud/fade-22px.png);
-  -webkit-background-size: 100% 100%;
+  background-color: #9e9e9e;
 }
 
 table.list-header th {
@@ -182,7 +180,7 @@ table {
     font-size: 11px;
     padding-right: 16px;
     height: 15px;
-    color: #555;
+    color: #222;
   }
 
   
@@ -192,7 +190,7 @@ table {
     width: 120px;
     padding-left: 5px;
     margin: 0;
-    border-right: 1px solid #aaa;
+    border-right: 1px solid #888;
     overflow: hidden;
   }
   
@@ -236,7 +234,8 @@ table {
   }
 
   table tbody tr:nth-child(odd) {
-    background-color: rgb(240,240,255);
+    background-color: #282828;
+    color: #EEE;
   }
 
 /*  table tbody tr:nth-child(odd):hover {
@@ -244,7 +243,8 @@ table {
   }
 */
   table tbody tr:nth-child(even) {
-    background-color: rgb(255,255,255);
+    background-color: #222;
+    color: #EEE;
   }
 
   table tbody tr.private {
@@ -264,11 +264,11 @@ table {
   }
 
   table tbody tr.selected {
-    background-color: #91D02D;
+    background-color: #8edd8d;
   }
 
   table tbody tr.selected td, table tbody tr.selected td a {
-    color: white;
+    color: black;
   }
 
 /*  table tbody tr:nth-child(even):hover {
@@ -521,12 +521,12 @@ table {
 
 #sidebar {
   position: absolute;
-  border-right: 1px solid #aaa;
+  border-right: 1px solid #555;
   width: 219px;
   left: 0;
-  top: 33px;
+  top: 32px;
   bottom: 50px;
-  background-color: #F0F9E1;
+  background-color: #222;
   background-position: 0 100%;
   background-repeat: repeat-x;
   -webkit-background-size: 100% 100%;  
@@ -535,10 +535,11 @@ table {
 }
 
 #sidebar h3 {
+  clear: both;
   font-size: 1em;
   margin: 2px;
   text-transform: uppercase;
-  color: #444;
+  color: #CCC;
 }
 
 #playlists, #plugins {
@@ -608,14 +609,13 @@ table {
 
   #playlists li.active, #plugins li.active {
     font-weight: bold;
-    background-color: #91D02D;
-    background-image: url(../../images/cloud/playlist-fade.png);
+    background-color: #8edd8d;
     background-repeat: repeat-x;
     -webkit-background-size: 100% 100%;
   }
   
     #playlists li.active a, #plugins li.active a, #playlists li.active em, #plugins li.active em {
-      color: white;
+      color: black;
     }
   
   #playlists li:hover, #plugins li:hover {
@@ -625,7 +625,7 @@ table {
     #playlists li a, #plugins li a {
       display: block;
       padding: 5px;
-      color: #333;
+      color: #EEE;
       text-decoration: none;
       height: 15px;
       position: relative;
@@ -634,11 +634,11 @@ table {
     #playlists li a.delete, #plugins li a.delete {
       position: absolute;
       right: 5px;
-      top: 7px;
-      width: 11px;
-      height: 11px;
+      top: 5px;
+      width: 16px;
+      height: 16px;
       background-image: url(../../images/cloud/icons.png);
-      background-position: -289px -6px;
+      background-position: -289px -4px;
       padding: 0;
       display: none;
     }
@@ -713,11 +713,11 @@ table {
 
   #player-display img.logo {
     width: 50px;
-    height: 22px;
+    height: 23px;
     position: absolute;
     left: 50%;
     margin-left: -25px;
-    top: 8px;
+    top: 7px;
   }
 
   #progress {
@@ -852,34 +852,30 @@ table {
 }
 
 #create-playlists {
-  position : absolute;
-  bottom: 5px;
-  left: 5px;
-  right: 0px;
-  height: 24px;
-  padding-top: 2px;
-  overflow: hidden;
+  background-color: #9E9E9E;
+  margin:0;
+  clear: both;
+  height: 17px;
+  margin-right: -1px;
+  margin-bottom: 3px;
+  border-right: 1px solid #888;
 }
 
   #add-playlist, #add-smart-playlist {
     display : block;
     float: left;
-    height: 19px;
-    background-image: url(../../images/cloud/icons.png);
-    margin: 1px 2px 1px 2px;
-    padding: 3px 0 0 25px;
+    height: 17px;
+    width: 79px;
+    margin: 0 0 0 5px;
+    padding: 0;
+    text-indent: -10000px;
     font-size: 11px;
     color: #555;
-    outline: 0;
   }
 
 #add-playlist {
-  width: 50px;
-  background-position: -395px -68px;
-}
-
-#add-playlist.click {
-  background-position: -395px -95px;
+  width: 51px;
+  background: #9e9e9e url(../../images/cloud/playlist_bg.png) top left no-repeat;
 }
 
 #add-playlist:hover, #add-smart-playlist:hover {
@@ -888,7 +884,7 @@ table {
 
 #add-smart-playlist {
   width: 79px;
-  background-position: -272px -68px;
+  background: #9e9e9e url(../../images/cloud/smart_playlist_bg.png) top left no-repeat;
 }
 
 #add-smart-playlist.click {
@@ -918,7 +914,7 @@ table {
   left: 0;
   right: 0;
   height: 32px;
-  border-bottom: 1px solid #aaa;
+  border: 0;
   background: #888 url(../../images/cloud/fade-bottom.png) repeat-x 0 0;
   -webkit-background-size: 100% 100%;
   padding: 0em 0em 0 0em;
