--- a/plugins/toolbar/views/layouts/application.html.erb
+++ b/plugins/toolbar/views/layouts/application.html.erb
@@ -27,6 +27,49 @@
     </head>
     <body>
       <div id="boombox">
+        <div class="bb-ct boombox">
+          <div class="bb-player-ct">
+            <div class="bb-player-l"></div>
+            <div class="bb-player-r"></div>
+            <div class="bb-player-c">
+     	      <span class="title" style="">LimeWire</span>
+              <a href="javascript:;" class="bb-button bb-button-prev" title="Prev"></a>
+              <a href="javascript:;" class="bb-button bb-big-button bb-button-play" title="Play"></a>
+              <a href="javascript:;" class="bb-button bb-button-next" title="Next"></a>
+              <a href="javascript:;" class="bb-button bb-button-stop" title="Stop"></a>
+              <div class="bb-right-buttons">
+                <a href="javascript:;" class="bb-button bb-button-playlist" title="Open Playlist"></a>
+                <a href="javascript:;" class="bb-button bb-button-shuffle" title="Shuffle"></a>
+                <a href="javascript:;" class="bb-button bb-button-volume" title="Volume"><div class="bb-button bb-button-volume-overlay"></div></a>
+              </div>
+              <div class="bb-track-ct">
+ 		<div class="bb-search">
+		  <form id="search-form">
+		    <div id="close-search">close search</div>
+		    <div id="remote">remote</div>
+		    <div id="local" class="selected">local</div>
+		    <div id="q-container"><input type="text" id="q"/></div>
+		  </form>
+		</div>
+                <div class="bb-track-name-ct">
+		  <div class="open-search">Search</div>
+                  <div class="bb-track-name-scroller">
+                    <div class="bb-track-name" unselectable="true" onselectstart="return false;">Remote Library</div>
+                  </div>
+                </div>
+                <div class="bb-track-progress">
+                  <div class="bb-track-progress-overlay"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="bb-playlist-ct">
+            <div class="bb-playlist-scroller"></div>
+          </div>
+	  <div class="bb-search-results-ct">
+	    <div class="bb-search-results"></div>
+	  </div>
+        </div>
       </div>
     </body>
 </html>
